hphp/hack/test/typecheck/global_const6.php
<?hh // partial

const X = $this;
